@@ -40,6 +40,7 @@ typedef struct DP_BrushPoint {
 
 typedef struct DP_StrokeParams {
     int layer_id;
+    bool interpolate;
     int stabilizer_sample_count;
     bool stabilizer_finish_strokes;
 } DP_StrokeParams;
