@@ -285,7 +285,7 @@ void render_brush_preview(
 static void set_preview_classic_brush(void *user, DP_BrushEngine *be,
                                       DP_UPixelFloat color)
 {
-    DP_StrokeParams stroke = {1, 0, false};
+    DP_StrokeParams stroke = {1, false, 0, false};
     DP_brush_engine_classic_brush_set(be, user, &stroke, &color);
 }
 
@@ -306,7 +306,7 @@ static void set_preview_mypaint_brush(void *user, DP_BrushEngine *be,
 {
     const DP_MyPaintBrush *brush = ((void **)user)[0];
     const DP_MyPaintSettings *settings = ((void **)user)[1];
-    DP_StrokeParams stroke = {1, 0, false};
+    DP_StrokeParams stroke = {1, false, 0, false};
     DP_brush_engine_mypaint_brush_set(be, brush, settings, &stroke, &color);
 }
 
